--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,7 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
-@import './example';
+@import './partials/mixins';
+@import './partials/container_movies';
+@import './partials/movie_card';
+@import './partials/footer';
