--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -2,15 +2,15 @@
   <button class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
-  <!-- <button class="pagination__button">1</button> -->
-  <!-- <button class="pagination__button">...</button> -->
+  <button class="pagination__button--hidden-on-mobile">1</button>
+  <button class="pagination__button--hidden-on-mobile">...</button>
   <button class="pagination__button">13</button>
   <button class="pagination__button">14</button>
   <button class="pagination__button--active">15</button>
   <button class="pagination__button">16</button>
   <button class="pagination__button">17</button>
-  <!-- <button class="pagination__button">...</button> -->
-  <!-- <button class="pagination__button">20</button> -->
+  <button class="pagination__button--hidden-on-mobile">...</button>
+  <button class="pagination__button--hidden-on-mobile">20</button>
   <button class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-right.svg" />
   </button>
