--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -34,5 +34,18 @@
       border-radius: 5px;
       cursor: pointer;
     }
+    &--hidden-on-mobile {
+      display: none;
+      @media screen and (min-width: 768px) {
+        display: flex;
+        padding: 0;
+        background-color: inherit;
+        border: none;
+        font-size: 12px;
+        line-height: 133%;
+        cursor: pointer;
+        font-weight: 700;
+      }
+    }
   }
 }
