work in progress

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -7,6 +7,15 @@
       <img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster" />
     </div>
     <h2 class="modal__title">LITTLE WOMEN</h2>
-    <dl></dl>
+    <dl>
+      <dt>Vote / Votes</dt>
+      <dd></dd>
+      <dt>Popularity</dt>
+      <dd></dd>
+      <dt>Original Title</dt>
+      <dd></dd>
+      <dt>Genre</dt>
+      <dd></dd>
+    </dl>
   </div>
 </div>
