work in porgress

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -9,7 +9,7 @@
     <h2 class="modal__title">LITTLE WOMEN</h2>
     <dl>
       <dt>Vote / Votes</dt>
-      <dd></dd>
+      <dd><span>7.3</span>/<span>1260</span></dd>
       <dt>Popularity</dt>
       <dd></dd>
       <dt>Original Title</dt>
