--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -6,33 +6,35 @@
     <div class="modal__poster-container">
       <img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster" />
     </div>
-    <h2 class="modal__title">LITTLE WOMEN</h2>
-    <dl>
-      <dt>Vote / Votes</dt>
-      <dd>
-        <span class="modal__rating">7.3</span> /
-        <span class="modal__rating modal__rating--number-of-votes">1260</span>
-      </dd>
-      <br />
-      <dt>Popularity</dt>
-      <dd>100.2</dd>
-      <dt>Original Title</dt>
-      <dd>A FISTFUL OF LEAD</dd>
-      <dt>Genre</dt>
-      <dd>Western</dd>
-    </dl>
-    <h3 class="modal__descripton-heading">ABOUT</h3>
-    <p class="modal__descripton">
-      Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the most
-      corrupt settlement of the gold rush towns. But not all goes to plan one is killed and the
-      other three escapes with bags of gold hide out in the abandoned gold mine where they happen
-      across another gang of three – who themselves were planning to hit the very same bank! As
-      tensions rise, things go from bad to worse as they realise the bags of gold are filled with
-      lead... they’ve been double crossed – but by who and how?
-    </p>
-    <div class="modal__buttons-container">
-      <button class="modal__button modal__button--watched">ADD TO WATCHED</button>
-      <button class="modal__button modal__button--queue">ADD TO QUEUE</button>
+    <div class="modal__movie-info">
+      <h2 class="modal__title">A FISTFUL OF LEAD</h2>
+      <dl>
+        <dt>Vote / Votes</dt>
+        <dd>
+          <span class="modal__rating">7.3</span> /
+          <span class="modal__rating modal__rating--number-of-votes">1260</span>
+        </dd>
+        <br />
+        <dt>Popularity</dt>
+        <dd>100.2</dd>
+        <dt>Original Title</dt>
+        <dd>A FISTFUL OF LEAD</dd>
+        <dt>Genre</dt>
+        <dd>Western</dd>
+      </dl>
+      <h3 class="modal__descripton-heading">ABOUT</h3>
+      <p class="modal__descripton">
+        Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the
+        most corrupt settlement of the gold rush towns. But not all goes to plan one is killed and
+        the other three escapes with bags of gold hide out in the abandoned gold mine where they
+        happen across another gang of three – who themselves were planning to hit the very same
+        bank! As tensions rise, things go from bad to worse as they realise the bags of gold are
+        filled with lead... they’ve been double crossed – but by who and how?
+      </p>
+      <div class="modal__buttons-container">
+        <button class="modal__button modal__button--watched">ADD TO WATCHED</button>
+        <button class="modal__button modal__button--queue">ADD TO QUEUE</button>
+      </div>
     </div>
   </div>
 </div>
