zmiany do movie-card

--- a/src/partials/movie_card.html
+++ b/src/partials/movie_card.html
@@ -7,5 +7,7 @@
         <p class="movie-card__title" id="title">LITTLE WOMEN</p>
         <span class="movie-card__genre" id="genre_ids">Drama |</span>
         <span class="movie-card__release-date" id="release_date"> 2019</span>
+        <!-- in JS need to add a script for changing visibility on Homepage: document.querySelector('.movie-card__rating').classList.add('is-hidden') -->
+        <span class="movie-card__rating" id="vote_average">9.5</span>
     </div>
 </div>
