--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,7 +1,8 @@
-<header class="header">
+<header>
   <div class="header_container">
     <div class="header_logo">
-      <img src='./images/logox2.png' width="24" hight="24" alt="logo" />
+      <a class="logo" href="#">
+      <img src='./images/logox2.png' width="24" hight="24" alt="logo" /></a>
       <span class="header_logo_text">Filmoteka</span>
     </div>
 
@@ -17,6 +18,7 @@
     </div>
     <form class="search_form" id="search_form">
       <input
+      class="search_input"
         type="text"
         name="search"
         autocomplete="off"
