--- a/src/sass/partials/_header_home.scss
+++ b/src/sass/partials/_header_home.scss
@@ -69,11 +69,15 @@ a {
 }
 
 
-.header {
+.header_container {
   height: 230px;
   background-image: url('/src/images/header_background1.png');
   opacity: 0.9;
-  padding-top: 40px;
+  width: 100%;
+  padding: 40px 20px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url('/src/images/header_background1x2.png');
@@ -83,14 +87,6 @@ a {
     height: 216px;
   }
 
-  &_container {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
 
     @media screen and (min-width: $mobile) {
       width: $mobile;
@@ -124,16 +120,28 @@ a {
       }
     }
  
+    .search_form {
+      position: absolute;
+      top: 80px;
+      left: 20px;
+      display: inline-flex;
+      width: 100vw;
+      .search_input{ 
+        border: none;
+        border-bottom: 1px solid white;
+        background-color: transparent;
+        outline: none;
+        color: white;
+        
+      }}
+      
+    }
 
     .header_menu {
       display: flex;
-     
       .header_menu_list {
         display: inline-flex;
-        justify-content: space-between;
         gap: 20px;
-        margin-bottom: 62px;
-
       }
       .menu {
         color: white;
@@ -147,21 +155,14 @@ a {
     }
    
 
-    .search_form {
-      position: absolute;
-      top: 80px;
-      left: 80px;
-      display: inline-flex;
-    }
    
     .header_film_status {
       position: absolute;
-      top: 110px;
-      margin: 0 auto;
+      top: 150px;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       gap: 20px;
-      margin-bottom: 62px;
+      
 
       .btn_film_status{
         width: 130px;
@@ -194,6 +195,6 @@ a {
       //     }
       //   }
       // }
-    }
-  }
+    
+  
 
