--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-  margin-top: 60px;
+  margin-bottom: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,5 +47,10 @@
         font-weight: 700;
       }
     }
+  }
+}
+@media screen and (max-width: 767px) {
+  .pagination {
+    margin-bottom: 40px;
   }
 }
