--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -3,5 +3,16 @@
     <button type="'button" class="modal-team__close">
       <img height="14" width="14" src="./images/close-button.svg" />
     </button>
+    <div class="team-members">
+      <div class="team-member">
+        <img src="" alt="" class="team-member__photo" />
+        <h2 class="team-member__name">Imię Nazwisko</h2>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae inventore quos impedit,
+          voluptatem obcaecati sequi ipsum dolorum molestias similique eius veniam, a ratione soluta
+          amet cumque, earum voluptates iusto! Tempore!
+        </p>
+      </div>
+    </div>
   </div>
 </div>
