--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -1,16 +1,71 @@
 <div class="modal-team__backdrop modal-team__hidden">
   <div class="modal-team">
     <button type="'button" class="modal-team__close">
-      <img height="14" width="14" src="./images/close-button.svg" />
+      <img width="40" height="14" width="14" src="./images/close-button.svg" />
     </button>
     <div class="team-members">
       <div class="team-member">
-        <img src="" alt="" class="team-member__photo" />
-        <h2 class="team-member__name">Imię Nazwisko</h2>
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
         <p class="team-member__description">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae inventore quos impedit,
-          voluptatem obcaecati sequi ipsum dolorum molestias similique eius veniam, a ratione soluta
-          amet cumque, earum voluptates iusto! Tempore!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="250" src="./images/demo.jpg" alt="" class="team-member__photo" />
+        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <p class="team-member__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
+          Numquam magni libero nihil officiis!
         </p>
       </div>
     </div>
