--- a/src/sass/partials/_modal_team.scss
+++ b/src/sass/partials/_modal_team.scss
@@ -1,51 +1,130 @@
 $tablet: 768px;
 $desktop: 1280px;
-.modal-team__backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  padding-top: 20px;
-  background: linear-gradient(
-    90deg,
-    rgba(194, 194, 204, 0.6278886554621849) 0%,
-    rgba(194, 194, 204, 0.6278886554621849) 0%
-  );
-}
-.modal-team__hidden {
-  display: none;
-}
+
 .modal-team {
-  width: 280px;
   max-height: 95vh;
+  width: 85%;
   background-color: #fff;
   margin: auto;
   position: relative;
   padding: 48 20 40;
   overflow-y: scroll;
-}
-.modal-team__close {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  border: none;
-  padding: 0;
-  background-color: transparent;
-  height: 14px;
-  font-size: 0;
-}
-@media screen and (min-width: #{$tablet}) {
-  .modal-team__backdrop {
-    padding-top: 100px;
+  overflow-x: hidden;
+  border-radius: 5px;
+  animation: fade-in 0.8s ease-out both;
+
+  &__backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding-top: 20px;
+    background: linear-gradient(
+      90deg,
+      rgba(194, 194, 204, 0.6278886554621849) 0%,
+      rgba(194, 194, 204, 0.6278886554621849) 0%
+    );
   }
+
+  &__hidden {
+    display: none;
+  }
+
+  &__close {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    height: 14px;
+    font-size: 0;
+    scale: 2;
+    cursor: pointer;
+    transition: transform 0.25s ease-out;
+    &:hover {
+      transform: scale(1.5);
+    }
+  }
+}
+.team-members {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.team-member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  padding: 0 5px;
+  border-bottom: 1px solid rgb(192, 192, 192);
+  margin-bottom: 40px;
+  &:last-child {
+    margin-bottom: 0px;
+    border: none;
+  }
+
+  &__description {
+    margin-top: 0;
+    text-align: center;
+  }
+  &__photo {
+    transition: transform 0.25s ease-out;
+    &:hover {
+      transform: scale(1.1);
+      cursor: pointer;
+    }
+  }
+}
+
+@media screen and (min-width: #{$tablet}) {
+  // .modal-team__backdrop {
+  //   padding-top: 100px;
+  // }
   .modal-team {
     width: 704px;
+  }
+  .team-member:last-child {
+    margin-bottom: 40px;
+    border-bottom: 1px solid rgb(192, 192, 192);
   }
 }
 
 @media screen and (min-width: #{$desktop}) {
   .modal-team {
-    width: 806px;
+    width: 1280px;
+    padding: 20px 20px;
+    overflow: hidden;
+    &__backdrop {
+      padding: 20px 0;
+    }
+  }
+
+  .team-members {
+    width: 1240px;
+    gap: 10px;
+    row-gap: 50px;
+  }
+
+  .team-member {
+    border-bottom: none;
+    margin-bottom: 0;
+    &:last-child {
+      margin-bottom: 0;
+      border-bottom: none;
+    }
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
