--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,24 +1,24 @@
-<header>
-  <div class="header_container">
-    <div class="header_logo">
-      <a class="logo" href="#">
+<header class="header">
+  <div class="headerContainer">
+    <div class="headerLogo">
+      <a class="logo" href="index.html">
       <img src='./images/logox2.png' width="24" hight="24" alt="logo" /></a>
-      <span class="header_logo_text">Filmoteka</span>
+      <span class="headerLogoText">Filmoteka</span>
     </div>
 
-    <div class="header_menu">
-      <ul class="header_menu_list">
+    <div class="headerMenu">
+      <ul class="headerMenuList">
         <li>
-          <a class="menu menu_is_active" href="#">HOME</a>
+          <a class="menu menuIsActive" href="./index.html">home</a>
         </li>
         <li>
-          <a class="menu" href="#">MY LIBRARY</a>
+          <a class="menu" href="./library.html">my library</a>
         </li>
       </ul>
     </div>
-    <form class="search_form" id="search_form">
+    <form class="searchForm" id="searchForm">
       <input
-      class="search_input"
+      class="searchInput"
         type="text"
         name="search"
         autocomplete="off"
@@ -26,11 +26,7 @@
         autocomplete="off"
         required
       />
-      <button type="submit" class="search-btn">lupa</button>
+      <button type="submit" class="searchBtn"></button>
     </form>
-    <div class="header_film_status">
-      <button type="button" class="btn_film_status">watched</button
-      ><button type="button" class="btn_film_status">queue</button>
-    </div>
   </div>
 </header>
