--- a/src/sass/partials/_modal_team.scss
+++ b/src/sass/partials/_modal_team.scss
@@ -88,9 +88,9 @@ $desktop: 1280px;
   .modal-team {
     width: 704px;
   }
-  .team-member:last-child {
-    margin-bottom: 40px;
-    border-bottom: 1px solid rgb(192, 192, 192);
+  .team-member:nth-child(n + 7) {
+    margin-bottom: 0px;
+    border-bottom: none;
   }
 }
 
@@ -113,9 +113,14 @@ $desktop: 1280px;
   .team-member {
     border-bottom: none;
     margin-bottom: 0;
-    &:last-child {
-      margin-bottom: 0;
-      border-bottom: none;
+
+    &__name {
+      border-bottom: 1px solid rgb(192, 192, 192);
+      padding: 15px 0 5px 0;
+      margin: 0;
+    }
+    &__description {
+      margin-top: 10px;
     }
   }
 }
