--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,14 +1,14 @@
-<header class="header">
+<header class="headerHome">
   <div class="headerContainer">
+    <div class="headerItem">
     <div class="headerLogo">
       <a class="logo" href="index.html">
       <img src='./images/logox2.png' width="24" hight="24" alt="logo" /></a>
       <span class="headerLogoText">Filmoteka</span>
     </div>
-
     <div class="headerMenu">
       <ul class="headerMenuList">
-        <li>
+        <li >
           <a class="menu menuIsActive" href="./index.html">home</a>
         </li>
         <li>
@@ -16,6 +16,7 @@
         </li>
       </ul>
     </div>
+   </div>
     <form class="searchForm" id="searchForm">
       <input
       class="searchInput"
@@ -26,7 +27,7 @@
         autocomplete="off"
         required
       />
-      <button type="submit" class="searchBtn"></button>
+      <button type="submit" class="searchBtn">o</button>
     </form>
   </div>
 </header>
