--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -17,7 +17,8 @@
       </ul>
     </div>
    </div>
-    <form class="searchForm" id="searchForm">
+   <!-- <div class="searchDiv" > -->
+    <form  class="searchForm"id="searchForm">
       <input
       class="searchInput"
         type="text"
@@ -30,4 +31,5 @@
       <button type="submit" class="searchBtn">o</button>
     </form>
   </div>
+  <!-- </div> -->
 </header>
