--- a/src/sass/partials/_modal_team.scss
+++ b/src/sass/partials/_modal_team.scss
@@ -100,7 +100,7 @@ $desktop: 1280px;
     padding: 20px 20px;
     overflow: hidden;
     &__backdrop {
-      padding: 20px 0;
+      padding: 50px 0 0 0;
     }
   }
 
