--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,15 +1,15 @@
-<header class="headerHome">
-  <div class="headerContainer">
-    <div class="headerItem">
-    <div class="headerLogo">
+<header class="header__home">
+  <div class="header__container">
+    <div class="header__item">
+    <div class="header__logo">
       <a class="logo" href="index.html">
       <img src='./images/logox2.png' width="24" hight="24" alt="logo" /></a>
-      <span class="headerLogoText">Filmoteka</span>
+      <span class="header__logo-text">Filmoteka</span>
     </div>
-    <div class="headerMenu">
-      <ul class="headerMenuList">
+    <div class="header__menu">
+      <ul class="header__menu-list">
         <li >
-          <a class="menu menuIsActive" href="./index.html">home</a>
+          <a class="menu menu-is-active" href="./index.html">home</a>
         </li>
         <li>
           <a class="menu" href="./library.html">my library</a>
@@ -18,9 +18,9 @@
     </div>
    </div>
    <!-- <div class="searchDiv" > -->
-    <form  class="searchForm"id="searchForm">
+    <form  class="search__form" id="form-search">
       <input
-      class="searchInput"
+      class="search__input"
         type="text"
         name="search"
         autocomplete="off"
@@ -28,8 +28,9 @@
         autocomplete="off"
         required
       />
-      <button type="submit" class="searchBtn">o</button>
+      <button type="submit" class="search__btn">o</button>
     </form>
+    <div class="no-result">Search result not successful. Enter the correct movie name and </div>
   </div>
   <!-- </div> -->
 </header>
