--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -1,25 +1,25 @@
-<header class="headerLibrary">
-  <div class="headerContainer">
-    <div class="headerItem">
-    <div class="headerLogo">
+<header class="header__home">
+  <div class="header__container">
+    <div class="header__item">
+    <div class="header__logo">
       <a class="logo" href="index.html">
       <img src='./images/logox2.png' width="24" hight="24" alt="logo" /></a>
-      <span class="headerLogoText">Filmoteka</span>
+      <span class="header__logo-text">Filmoteka</span>
     </div>
-    <div class="headerMenu">
-      <ul class="headerMenuList">
+    <div class="header__menu">
+      <ul class="header__menu-list">
         <li >
           <a class="menu " href="./index.html">home</a>
         </li>
         <li>
-          <a class="menu menuIsActive" href="./library.html">my library</a>
+          <a class="menu menu-is-active" href="./library.html">my library</a>
         </li>
       </ul>
     </div>
    </div>
-      <div class="headerFilmStatus">
-        <button type="button" class="btnFilmStatus">watched</button
-        ><button type="button" class="btnFilmStatus">queue</button>
+      <div class="header__film-status">
+        <button type="button" class="btn-film-status">watched</button
+        ><button type="button" class="btn-film-status">queue</button>
       </div>
     </div>
   </header>
