--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,13 +4,12 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
-
+@import './partials/mixins';
+@import './partials/typography';
 @import './partials/header_home';
 @import './partials/pagination';
-@import './partials/mixins';
 @import './partials/container_movies';
 @import './partials/movie_card';
 @import './partials/footer';
 @import './partials/modal';
 @import './partials/modal_team';
-
