--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,12 +5,13 @@
 
 // Style dla pliku z przykładem HTML fragmentu
 
-@import './partials/header_home';
-@import './partials/pagination';
 @import './partials/mixins';
+@import './partials/typography';
+@import './partials/common';
+@import './partials/header';
+@import './partials/pagination';
 @import './partials/container_movies';
 @import './partials/movie_card';
 @import './partials/footer';
 @import './partials/modal';
 @import './partials/modal_team';
-
