fix movie card + retina
zmiany do movie card + retina + js

--- a/src/partials/movie_card.html
+++ b/src/partials/movie_card.html
@@ -1,8 +1,11 @@
 <div class="movie-card" id="1">
+    <div class="movie-card__poster-container">
     <img class="movie-card__poster" id="poster_path"
     src="./images/rectangle.jpg"
+    srcset="./images/rectangle.jpg 1x, ./images/rectangle.jpg 2x"
     alt=""
     />
+    </div>
     <div class="movie-card__figcaption">
         <p class="movie-card__title" id="title">LITTLE WOMEN</p>
         <span class="movie-card__genre" id="genre_ids">Drama |</span>
