--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -3,6 +3,7 @@
     <button type="'button" class="modal-team__close">
       <img width="40" height="14" width="14" src="./images/close-button.svg" />
     </button>
+    <h2 class="modal-team__header">Zespół grupa nr: 5</h2>
     <div class="team-members">
       <div class="team-member">
         <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
