--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -15,7 +15,7 @@
       </li>
     </ul>
   </div>
-  <from class="form" id="form-search">
+  <form class="form" id="form-search">
     <input
       class="form__input"
       type="text"
@@ -31,5 +31,5 @@
       </svg>
     </button>
     <div class="form__result">Search result not successful. Enter the correct movie name.</div>
-  </from>
+  </form>
 </header>
