modal dynamic content done

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,8 @@
     <button type="'button" class="modal__close">
       <img height="14" width="14" src="./images/close-button.svg" />
     </button>
-    <div class="modal__poster-container">
+    <div class="modal__container">
+      <!-- <div class="modal__poster-container">
       <img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster" />
     </div>
     <div class="modal__movie-info">
@@ -35,6 +36,7 @@
         <button class="modal__button modal__button--watched">ADD TO WATCHED</button>
         <button class="modal__button modal__button--queue">ADD TO QUEUE</button>
       </div>
+    </div> -->
     </div>
   </div>
 </div>
