--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,17 +1,17 @@
 <section class="pagination">
-  <button class="pagination__button--arrow-previous">
+  <button id="previous" class="pagination__button--arrow-previous">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
-  <button class="pagination__button--hidden-on-mobile">1</button>
-  <button class="pagination__button--hidden-on-mobile">...</button>
-  <button class="pagination__button">13</button>
-  <button class="pagination__button">14</button>
-  <button class="pagination__button--active">15</button>
-  <button class="pagination__button">16</button>
-  <button class="pagination__button">17</button>
-  <button class="pagination__button--hidden-on-mobile">...</button>
-  <button class="pagination__button--hidden-on-mobile">20</button>
-  <button class="pagination__button--arrow-next">
+  <button id="first" class="pagination__button--hidden-on-mobile">1</button>
+  <button id="dot" class="pagination__button--hidden-on-mobile">...</button>
+  <button id="minus2" class="pagination__button">13</button>
+  <button id="minus1" class="pagination__button">14</button>
+  <button id="current" class="pagination__button--active">15</button>
+  <button id="plus1" class="pagination__button">16</button>
+  <button id="plus2" class="pagination__button">17</button>
+  <button id="dot" class="pagination__button--hidden-on-mobile">...</button>
+  <button id="last" class="pagination__button--hidden-on-mobile">20</button>
+  <button id="next" class="pagination__button--arrow-next">
     <img src="./images/icons-pagination/arrow-right.svg" />
   </button>
 </section>
