--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -7,6 +7,12 @@
       <p class="header__title">Filmoteka</p>
     </a>
     <ul class="header__list">
+      <li>
+        <button class="login">Log in</button>
+      </li>
+      <li>
+        <button class="Register">Register</button>
+      </li>
       <li class="header__item">
         <a class="header__link header__link--active" href="/src/index.html"> Home </a>
       </li>
