--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -25,8 +25,7 @@
       line-height: 133%;
       cursor: pointer;
     }
-    &--arrow-previous,
-    &--arrow-next {
+    &--arrow {
       padding: 0;
       width: 40px;
       height: 40px;
@@ -47,6 +46,9 @@
         cursor: pointer;
         font-weight: 700;
       }
+    }
+    &__is-hidden {
+      display: none;
     }
   }
 }
