Pagination in progress

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,4 +1,28 @@
 <section class="pagination">
+  <div>
+    <button id="previous" class="pagination__button--arrow">
+      <img src="./images/icons-pagination/arrow-left.svg" />
+    </button>
+  </div>
+  <div><button id="first" class="pagination__button--hidden-on-mobile" data-page="1"></button></div>
+  <div><button id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</button></div>
+  <div><button id="minus2" class="pagination__button" data-page=""></button></div>
+  <div><button id="minus1" class="pagination__button" data-page=""></button></div>
+  <div><button id="current" class="pagination__button--active" data-page=""></button></div>
+  <div><button id="plus1" class="pagination__button" data-page=""></button></div>
+  <div><button id="plus2" class="pagination__button" data-page=""></button></div>
+  <div>
+    <button id="dot2" class="pagination__button--hidden-on-mobile" data-page="">...</button>
+  </div>
+  <div><button id="last" class="pagination__button--hidden-on-mobile" data-page=""></button></div>
+  <div>
+    <button id="next" class="pagination__button--arrow">
+      <img src="./images/icons-pagination/arrow-right.svg" />
+    </button>
+  </div>
+</section>
+
+<!-- <section class="pagination">
   <button id="previous" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
@@ -14,4 +38,4 @@
   <button id="next" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-right.svg" />
   </button>
-</section>
+</section> -->
