--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
+  &__is-hidden {
+    display: none;
+  }
   &__button {
     padding: 0;
     background-color: inherit;
@@ -47,13 +50,14 @@
         font-weight: 700;
       }
     }
-    &__is-hidden {
-      display: none;
-    }
   }
 }
 @media screen and (max-width: 767px) {
   .pagination {
     margin-bottom: 40px;
   }
+}
+
+.is-hidden {
+  display: none;
 }
