--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -8,11 +8,46 @@
     </a>
     <ul class="header__list">
       <li>
-        <button class="login">Log in</button>
+        <div class="" id="login-div">
+          <button class="login" id="log-btn">Log in</button><br />
+          <input
+            type="email"
+            id="login-email"
+            name="login-email"
+            placeholder="Email"
+            required
+          /><br />
+          <input
+            type="password"
+            id="login-password"
+            name="login-password"
+            placeholder="Password"
+            required
+          />
+        </div>
       </li>
       <li>
-        <button class="Register">Register</button>
+        <div id="register-div">
+          <button class="Register" id="register-btn">Register</button><br />
+          <input
+            type="email"
+            id="register-email"
+            name="register-email"
+            placeholder="Email"
+            required
+          /><br />
+          <input
+            type="password"
+            id="register-password"
+            name="register-password"
+            placeholder="Password"
+            required
+          />
+        </div>
       </li>
+      <!-- <li id="result-box">
+        <h3 id="result"></h3>
+      </li> -->
       <li class="header__item">
         <a class="header__link header__link--active" href="/src/index.html"> Home </a>
       </li>
